# Flora.Finance

./: Jenkinsfile  Makefile  README.md  package-lock.json  package.json  rococo-custom-2-plain.json  rococo_local.json  runtime metadata  sonar-project.properties  test-relay-chain.json
Documentation/: FloraFinance_Front_1.md  FloraFinance_front_2.md  README.md  retype.yml
Documentation/FloraFinance_business/: flora.finance.drawio  pallets.drawio
flora/: package-lock.json  package.json
flora-front/: README.md  package-lock.json  package.json
flora-front/public/: index.html
flora-front/src/: App.js
flora-front/src/components/: AccountSelector.js  Events.js  Interactor.js  globalStyle.scss
flora-front/src/components/Content/: Content.js  Content.scss  Phome.js
flora-front/src/components/SideBar/: Sidebar.js  Sidebar.scss
flora-front/src/components/SideBarMenu/: SideBar.js
flora-front/src/components/Swap/: swap.js
flora-front/src/config/: types.json
flora-front/src/middlewares/: Main.js
flora-front/src/pages/About/: About.js  about.scss
flora-front/src/pages/Contact/: Contact.js  Contact.scss
flora-front/src/pages/Home/: Home.js  Home.scss
flora-front/src/pages/NotFound/: NotFound.js  notfoun.scss
flora-front/src/pages/market/: Market.js  market.scss
flora-front/src/pages/test/: test.js  test.scss
flora-front/src/substrate-lib/components/: TxButton.js
flora-front/src/wallet/: main.js  wallet.js  wallet.scss
flora/public/: index.html
flora/src/: App.js
flora/src/Components/Footer/: Footer.js  footer.scss
flora/src/Components/Header/: Header.js  header.scss
flora/src/Components/Navbar/: MenuItems.js  Navbar.js  navbar.scss
flora/src/Components/dev/: developerPage.js  not.scss
flora/src/connectors/: Balances.js
flora/src/pages/About/: About.js  about.scss
flora/src/pages/CarbonCredits/: CarbonCredits.js  carbonCredits.scss
flora/src/pages/Contact/: Contact.js  contact.scss
flora/src/pages/Home/: Home.js  Home.scss
flora/src/pages/Nft/: NFT.js  nft.scss
flora/src/pages/projects/: Projects.js  projects.scss
node/: Cargo.toml
node/src/: chain_spec.rs
pallets/auctions/: Cargo.toml
pallets/auctions/src/: lib.rs
pallets/crowdloan-rewards/: Cargo.toml
pallets/crowdloan-rewards/src/: lib.rs
pallets/fungible/: Cargo.toml
pallets/fungible/src/: lib.rs  mock.rs
pallets/game/: Cargo.toml
pallets/game-room/: Cargo.toml
pallets/game-room/src/: lib.rs
pallets/game/src/: lib.rs
pallets/lockable-currency/: Cargo.toml
pallets/lockable-currency/src/: lib.rs
pallets/nft-market/: Cargo.toml
pallets/nft-market/src/: lib.rs  mock.rs  tests.rs
pallets/nfts/: Cargo.toml
pallets/nfts/src/: lib.rs
pallets/profile/: Cargo.toml
pallets/profile/src/: lib.rs
pallets/rank-token/: Cargo.toml
pallets/rank-token/src/: lib.rs
pallets/scored-pool/: Cargo.toml
pallets/scored-pool/src/: lib.rs
pallets/scores/: Cargo.toml
pallets/scores/src/: lib.rs
pallets/simple-crowdfund/: Cargo.toml
pallets/simple-crowdfund/src/: lib.rs  libv2 -needsupdate
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs  tests.rs
pallets/tournament/: Cargo.toml
pallets/tournament/src/: lib.rs
pallets/utils/: Cargo.toml
pallets/utils/src/: lib.rs
parachain-2000/: genesis-was
primitives/: Cargo.toml
primitives/src/: lib.rs  string_conversion.rs
resources/: para-2000-genesis  template-local-plain.json
runtime/: Cargo.toml
runtime/src/: constants.rs  lib.rs
